--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
     "autoprefixer": "^10.0.1",
     "eslint": "^9",
     "eslint-config-next": "16.1.4",
+    "eslint-config-prettier": "^9.1.2",
     "postcss": "^8",
+    "prettier": "^3.8.0",
+    "prettier-plugin-tailwindcss": "^0.5.14",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
